[build-system]
requires = ["setuptools>61", "setuptools-scm>=3.4.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mly"
authors = [
    {name = "Vasileios SKliris", email = "sklirisv@cardiff.ac.uk"},
]
description = "Toolkit package to run GW search using ML."
readme = "README.md"
requires-python = ">=3.7"
keywords = ["ml", "gravitational waves", "bursts"]
license = {file = "LICENCE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy",
    "pandas",
    "gwpy >= 0.13.1",
    "gwdatafind",
    "matplotlib",
    "pycondor",
    "dqsegdb2",
    "scipy",
    "tensorflow >= 2.6",
    "pycbc",
    "healpy",
    "ligo.skymap"
]

# dynamic properties set by tools
dynamic = [
  "version",
]

[tool.setuptools_scm]
write_to = "mly/_version.py"
