[build-system]
requires = ["setuptools>61", "setuptools-scm>=3.4.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mly"
authors = [
    {name = "Vasileios SKliris", email = "sklirisv@cardiff.ac.uk"},
]
description = "Toolkit package to run GW search using ML."
readme = "README.md"
requires-python = ">=3.7"
keywords = ["ml", "gravitational waves", "bursts"]
license = {file = "LICENCE"}
classifiers = [
    "Programming Language :: Python :: 3",
]


dependencies = [
    "numpy==1.23.4",
    "pandas==1.5.0",
    "gwpy>=0.13.1",
    "gwdatafind==1.1.3 ",
    "matplotlib==3.7.1",
    "pycondor==0.6.0",
    "dqsegdb2==1.2.1",
    "scipy==1.10.1",
    "tensorflow==2.10.0",
    "pycbc==2.0.6",
    "healpy==1.16.2",
    "ligo.skymap==1.0.7"
]

dynamic = [
  "version",
]

[tool.setuptools.packages.find]
# note: this is only required in CI, which otherwise fails because
#       GHA is creating a temporary directory that setuptools
#       discovers as another top-level package
include = [
  "mly",
]


[tool.coverage.run]
source = [ "mly" ]
omit = [
  # don't report coverage for _version.py
  # (generated automatically by setuptools-scm)
  "*/_version.py",
]

[tool.setuptools_scm]
write_to = "mly/_version.py"
